--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <header>
-        <h1><strong >Welcome to Kelly Li's Portfolio!</strong></h1>
+        <h2><strong >Welcome to Kelly Li's Portfolio!</strong></h2>
     </header>
     
     <main>
 
     <div class="center">
-        <img src="https://media.giphy.com/media/TLeLKUdIc1tvAxb7ab/giphy.gif" alt="Work in Progress GIF">
+        <img src="https://media.giphy.com/media/TLeLKUdIc1tvAxb7ab/giphy.gif" width="400" alt="Work in Progress GIF">
     </div>
     
     <p>Hello there! I'm excited to showcase my work, but it's not quite ready yet. My website is currently under construction, but don't worry, I'm working hard to bring you an awesome experience soon!</p>
