portfolio revamp: added new sections

--- a/index.html
+++ b/index.html
@@ -7,12 +7,54 @@
     <title>Kelly Li's Portfolio</title>
     <link rel="stylesheet" href="temp_style.css">
 </head>
+
 <body>
-    <header>
-        <h1><strong >PROJECTS</strong></h1>
-    </header>
     
+    <!-- Sticky Menu Bar -->
+    <div class="menu-bar">
+        <div class="branding">Kelly Li</div>
+        <ul>
+            <li><a href="#contact">CONTACT</a></li>
+            <li><a href="#cv">CV</a></li>
+            <li><a href="#projects">PROJECTS</a></li>
+            <li><a href="#about">ABOUT</a></li>
+            <li><a href="#home">HOME</a></li>
+        </ul>
+    </div>
+
     <main>
+
+        <!-- Home Section -->
+        <section id="home">
+            <!-- Home content goes here -->
+        </section>
+
+        <!-- About Section -->
+        <section id="about">
+            <br><br>
+            <h2><br>ABOUT</h2>
+            <p>By day, I'm a data scientist, delving into the intricate world of data after a spell as a biotech whiz. Armed with a biotech degree, I've traded pipettes for Python, morphing into a data magician. Beyond my data-drenched pursuits, I'm on a mission to demystify open-source, engineer tech that empowers, and weave a close-knit community. With an insatiable hunger for learning, I'm always eager to expand my skill set and evolve as a person.<br></p>
+            <p>When I'm not lost in coding spells or culinary experiments (I whip up both algorithms and crème brûlée), I'm concocting ways to fuse data-driven insights with gastronomic delights. So, let's stir up a symphony of flavors and insights together!<br></p>
+        </section>
+
+        <!-- Projects Section -->
+        <section id="projects">
+            <!-- Projects content goes here -->
+        </section>
+
+        <!-- CV Section -->
+        <section id="cv">
+            <!-- CV content goes here -->
+        </section>
+
+        <!-- Contact Section -->
+        <section id="contact">
+            <!-- Contact content goes here -->
+        </section>
+
+        <br>
+        <h2>PROJECTS</h2>
+        <br>
         <h3 style = 'font-size: 30px';>Recipe Recommender</h3>
         
         <p>This project aims to create a personalized recipe recommendation system, catering to users' individual preferences and dietary needs. Leveraging advanced data science techniques like Word2Vec, Word Embeddings Neural Network, TF-IDF, and FunkSVD, the system provides users with enticing and relevant recipe suggestions, inspiring culinary creativity.</p>
