added home and about sections

--- a/index.html
+++ b/index.html
@@ -27,9 +27,12 @@
     <main>
 
         <!-- Home Section -->
-        <section id="home" class="start">
+        <section id="home">
             <div class="image-container">
                 <img src="input/profile-pic.jpg" alt="Kelly Li's headshot">
+            </div>
+            <div>
+                <h3 style = 'font-size: 50px; text-align: center; color: #494e52e7;'>Hi, I'm Kelly Li</h3>
             </div>
         </section>
 
