--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <img src="https://media.giphy.com/media/TLeLKUdIc1tvAxb7ab/giphy.gif" alt="Work in Progress GIF">
             </div>
 
-            <p><br><br><strong> More projects underway...</strong></p>
+            <p><br><strong> More projects underway...</strong></p>
         </section>
 
         <!-- CV Section -->
