remove cv for now

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="branding">Kelly Li</div>
         <ul>
             <li><a href="#contact">CONTACT</a></li>
-            <li><a href="#cv">CV</a></li>
+            <!-- <li><a href="#cv">CV</a></li> -->
             <li><a href="#projects">PROJECTS</a></li>
             <li><a href="#about">ABOUT</a></li>
             <li><a href="#home">HOME</a></li>
