remove cv and contact for now

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="menu-bar">
         <div class="branding">Kelly Li</div>
         <ul>
-            <li><a href="#contact">CONTACT</a></li>
+            <!-- <li><a href="#contact">CONTACT</a></li> -->
             <!-- <li><a href="#cv">CV</a></li> -->
             <li><a href="#projects">PROJECTS</a></li>
             <li><a href="#about">ABOUT</a></li>
@@ -79,14 +79,14 @@
         </section>
 
         <!-- CV Section -->
-        <section id="cv">
+        <!-- <section id="cv"> -->
             <!-- CV content goes here -->
-        </section>
+        <!-- </section> -->
 
         <!-- Contact Section -->
-        <section id="contact">
+        <!-- <section id="contact"> -->
             <!-- Contact content goes here -->
-        </section>
+        <!-- </section> -->
 
 
     </main>
