--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
             <p>The modern world of e-commerce has revolutionized the way consumers shop for everyday essentials. With the increasing reliance on online platforms for grocery shopping, understanding customer preferences, purchasing patterns, and product associations has become essential for both retailers and data scientists.</p>
             <p>By undertaking this project, I aim to extract valuable insights from the dataset that can benefit both Instacart as a service provider and consumers looking for a more convenient shopping experience. Through data-driven analysis, we can uncover hidden patterns, identify trends, and develop data-driven strategies for optimizing the shopping journey.</p>
-            <p>Feel free to stay up-to-date with my progress <a href="https://github.com/kli210/instacart-market-basket-analysis" target="_blank">here</a>!</p>
+            <p>Stay up-to-date with my progress <a href="https://github.com/kli210/instacart-market-basket-analysis" target="_blank">here</a>!</p>
 
             <div class="center">
                 <img src="https://media.giphy.com/media/TLeLKUdIc1tvAxb7ab/giphy.gif" alt="Work in Progress GIF">
