--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
             <div>
                 <h3 style = 'font-size: 50px; text-align: center; color: #494e52e7;'>Hi, I'm Kelly Li</h3>
             </div>
+            <div class="center">
+                <img src="https://media.giphy.com/media/TLeLKUdIc1tvAxb7ab/giphy.gif" alt="Work in Progress GIF">
+            </div>
         </section>
 
 
