--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@
         
             <ul>
                 <li><strong>Programming Languages:</strong> Python, SQL, R, HTML & CSS</li>
-                <li><strong>Data Analysis:</strong> Pandas, NumPy, SciPy</li>
-                <li><strong>Visuaization:</strong> Tableau, PowerBI, Matplotlib, Seaborn</li>
-                <li><strong>Machine Learning:</strong>Scikit-learn, NLP, TensorFlow, Keras, PyTorch</li>
-                <li><strong>Data Management:</strong> MySQL</li>
-                <li><strong>Big Data:</strong> AWS (EC2, S3), Hadoop, Hive, Spark</li>
+                <li><strong>Data Analysis:</strong>  SQL (Self-joins, Window Functions, Parameters), Excel (VLookup, Conditional Formatting, Pivot Tables Power Query and data validation)</li>
+                <li><strong>Packages:</strong>  NumPy, Pandas, Matplotlib, Seaborn, SciPy, ggplot2, Scikit-learn, TensorFlow, Keras, PyTorch</li>
+                <li><strong>Software Tools:</strong> Tableau, Power BI, Data Build Tool, Git, MS Office, Latex, Jira, Docker, PySpark, Google Analytics, SAS</li>
+                <li><strong>IDEs:</strong> Jupyter Notebook, PyCharm, Google Colab, R studio, Visual Studio Code, Kaggle</li>
+                <li><strong>Big Data:</strong> AWS (EC2, S3), Hadoop, Hive, Apache Spark </li>
                 <li><strong>Data Engineering:</strong> Data Pipelines, ETL processes, Data Warehousing</li>
-                <li><strong>Version Control:</strong> Git, GitHub</li>
+                <li><strong>Data Warehouse:</strong> MySQL, Snowflake</li>
                 <li><strong>Deployment:</strong> Streamlit (Interactive Web Apps)</li>
-                <li><strong>Scrum/Agile Tools:</strong> JIRA, Trello</li>
-                <li><strong>Other Tools:</strong> Excel (VLookup, Conditional Formatting, Pivot Tables, Power Query, data validation), Google Analytics</li>
+                <li><strong>Methodologies:</strong> Agile, Scrum, Kanban, Waterfall</li>
+                <li><strong>Operating System:</strong> Windows, Linux, Unix</li>
             </ul>
         
             <h3>A Peek Behind the Kitchen:</h3>
