--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <h3>Ingredients I Bring to the Table:</h3>
         
             <ul>
-                <li><strong>Programming Languages:</strong> Python, SQL, R, HTML & CSS</li>
+                <li><strong>Programming Languages:</strong> Python, SQL, R, HTML & CSS, JS</li>
                 <li><strong>Data Analysis:</strong>  SQL (Self-joins, Window Functions, Parameters), Excel (VLookup, Conditional Formatting, Pivot Tables Power Query and data validation)</li>
                 <li><strong>Packages:</strong>  NumPy, Pandas, Matplotlib, Seaborn, SciPy, ggplot2, Scikit-learn, TensorFlow, Keras, PyTorch</li>
                 <li><strong>Software Tools:</strong> Tableau, Power BI, Data Build Tool, Git, MS Office, Latex, Jira, Docker, PySpark, Google Analytics, SAS</li>
