modify landing page intro

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="homepage">
                 <h3 style="font-size: 80px; margin: 60px auto">Hello.</h3>
                 <h3 style="font-size: 80px; margin: 60px auto">I'm Kelly Li.</h3>
-                <p style="font-size: 22px;">I'm a Data Scientist and Storyteller currently based in Toronto, CA.</p>
+                <p style="font-size: 22px;">A Data Scientist, who also crafts compelling narratives through data, currently based in Toronto, CA.</p>
             </div>
         </section>
 
