--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
     <link rel="stylesheet" href="temp_style.css">
 
-    <script src="smooth-scroll.js"></script>
+    <script src="JS/smooth-scroll.js"></script>
+    <script src="JS/text-fade-in.js"></script>
 
 </head>
 
@@ -36,11 +37,12 @@
                 <img src="input/profile-pic.png" alt="Kelly Li's headshot">
             </div>
             <div class="homepage">
-                <h3 style="font-size: 80px; margin: 60px auto">Hello.</h3>
-                <h3 style="font-size: 80px; margin: 60px auto">I'm Kelly Li.</h3>
-                <p style="font-size: 22px;">A Data Scientist, who also crafts compelling narratives through data, currently based in Toronto, CA.</p>
+                <h3 class="animated-text" style="font-size: 80px; margin: 60px auto">Hello,</h3>
+                <h3 class="animated-text" style="font-size: 80px; margin: 60px auto">I'm Kelly Li.</h3>
+                <p class="animated-text" style="font-size: 22px">A Data Scientist, who also crafts compelling narratives through data, currently based in Toronto, CA.</p>
             </div>
         </section>
+
 
 
         <!-- About Section -->
@@ -173,5 +175,6 @@
     </footer>
 
 </body>
-<script src="smooth-scroll.js"></script>
+<script src="JS/smooth-scroll.js"></script>
+<script src="JS/text-fade-in.js"></script>
 </html>
