--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     
     <!-- Sticky Menu Bar -->
     <div class="menu-bar">
+        <div class="branding">KL.</div>
         <ul>
             <!-- <li><a href="#contact">CONTACT</a></li> -->
             <!-- <li><a href="#cv">CV</a></li> -->
@@ -42,7 +43,6 @@
                 <p class="animated-text" style="font-size: 22px">A Data Scientist, who also crafts compelling narratives through data, currently based in Toronto, CA.</p>
             </div>
         </section>
-
 
 
         <!-- About Section -->
