--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="homepage">
                 <h3 class="animated-text" style="font-size: 80px; margin: 60px auto">Hello,</h3>
                 <h3 class="animated-text" style="font-size: 80px; margin: 60px auto">I'm Kelly Li.</h3>
-                <p class="animated-text" style="font-size: 22px">A Data Scientist, who also crafts compelling narratives through data, currently based in Toronto, CA.</p>
+                <p class="animated-text" style="font-size: 22px">A Data Scientist, who also crafts compelling narratives through data, currently based in Toronto, ON.</p>
             </div>
         </section>
 
