--- a/index.html
+++ b/index.html
@@ -125,30 +125,30 @@
 
         <!-- Contact Section -->
         <section id="contact">
-            <h3 style="font-size: 50px;">Let's get in touch!</h3>
+            <h3 style="font-size: 50px;" align='center'>Let's get in touch!</h3>
 
             <!-- Contact Form -->
-            <form id="contact-form">
+            <form id="contact-form" class="contactform">
                 <!-- Name Input -->
-                <div>
-                    <label for="name">Name:</label>
-                    <input type="text" id="name" name="name" required>
-                </div>
+                    <div>
+                        <label for="name">Name:</label>
+                        <input type="text" id="name" name="name" required>
+                    </div>
 
-                <!-- Email Input -->
-                <div>
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required>
-                </div>
+                    <!-- Email Input -->
+                    <div>
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="email" required>
+                    </div>
 
-                <!-- Message Textarea -->
-                <div>
-                    <label for="message">Type your message here:</label>
-                    <textarea id="message" name="message" rows="4" required></textarea>
-                </div>
+                    <!-- Message Textarea -->
+                    <div>
+                        <label for="message">Type your message here:</label>
+                        <textarea id="message" name="message" rows="4" required></textarea>
+                    </div>
 
-                <!-- Submit Button -->
-                <button type="submit">Submit</button>
+                    <!-- Submit Button -->
+                    <button type="submit">Submit</button>
             </form>
 
         </section>
