add form submission php

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <h3 style="font-size: 50px;" align='center'>Let's get in touch!</h3>
 
             <!-- Contact Form -->
-            <form id="contact-form" class="contactform">
+            <form id="contact-form" class="contactform" action="submit_form.php" method="post">
                 <!-- Name Input -->
                     <div>
                         <label for="name">Name:</label>
