--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- JavaScript -->
     <script src="JS/smooth-scroll.js"></script>
     <script src="JS/text-fade-in.js"></script>
-    <script src="JS/contact-from.js"></script>
+    <script src="JS/contact-form.js"></script>
 </head>
 
 <body>
@@ -128,7 +128,7 @@
             <h3 style="font-size: 50px;" align='center'>Let's get in touch!</h3>
 
             <!-- Contact Form -->
-            <form id="contact-form" class="contactform" action="submit_form.php" method="post">
+            <form id="contact-form" class="contactform">
                 <!-- Name Input -->
                     <div>
                         <label for="name">Name:</label>
