--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="branding">KL.</div>
         <ul>
             <li><a href="#contact">CONTACT</a></li>
-            <!-- <li><a href="#cv">CV</a></li> -->
+            <li><a href="input/Kelly_Li_resume.pdf" target="_blank" rel="noopener noreferrer">RESUME/CV</a></li>
             <li><a href="#projects">PROJECTS</a></li>
             <li><a href="#about">ABOUT</a></li>
             <li><a href="#home">HOME</a></li>
