--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
                 <h3 class="animated-text" style="font-size: 80px; margin: 60px auto">Hello,</h3>
                 <h3 class="animated-text" style="font-size: 80px; margin: 60px auto">I'm Kelly Li.</h3>
                 <p class="animated-text" style="font-size: 22px">A Data Scientist, who also crafts compelling narratives through data, currently based in Toronto, ON.</p>
+                <!-- Resume Button -->
+                <a href="input/Kelly_Li_resume.pdf" class="resume-button" target="_blank" rel="noopener noreferrer">Resume</a>
             </div>
         </section>
 
