add class to resume button

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <h3 class="animated-text" style="font-size: 80px; margin: 60px auto">I'm Kelly Li.</h3>
                 <p class="animated-text" style="font-size: 22px">A Data Scientist, who also crafts compelling narratives through data, currently based in Toronto, ON.</p>
                 <!-- Resume Button -->
-                <a href="input/Kelly_Li_resume.pdf" class="resume-button" target="_blank" rel="noopener noreferrer">Resume</a>
+                <a href="input/Kelly_Li_resume.pdf" class="resume-button animated-text" target="_blank" rel="noopener noreferrer">Resume</a>
             </div>
         </section>
 
