change js script

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 // generate a five digit number for the contact_number variable
                 this.contact_number.value = Math.random() * 100000 | 0;
                 // these IDs from the previous steps
-                emailjs.sendForm('service_2ztvelc', 'template_b3jc5eb', '#contact-form')
+                emailjs.sendForm('service_2ztvelc', 'template_b3jc5eb', this)
                     .then(function() {
                         console.log('SUCCESS!');
                     }, function(error) {
