--- a/index.html
+++ b/index.html
@@ -21,33 +21,36 @@
       src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"
     ></script>
 
-    <script type="text/javascript">      (function () {
-        emailjs.init("4_gddovEqULo4_E9u");
-      })();
+    <script type="text/javascript">      
+        (function () {
+            emailjs.init("4_gddovEqULo4_E9u");
+        })();
     </script>
 
     <script>
+    document.addEventListener("DOMContentLoaded", function () {
       // listen to the form submission
-      document
-        .getElementById("contact-form")
-        .addEventListener("submit", function (event) {
-          event.preventDefault();
+        document
+            .getElementById("contact-form")
+            .addEventListener("submit", function (event) {
+            event.preventDefault();
 
-          const serviceID = "service_2ztvelc";
-          const templateID = "template_b3jc5eb";
+            const serviceID = "service_2ztvelc";
+            const templateID = "template_b3jc5eb";
 
-          // send the email here
-          emailjs.sendForm(serviceID, templateID, this).then(
-            (response) => {
-              console.log("SUCCESS!", response.status, response.text);
-              alert("SUCCESS!");
-            },
-            (error) => {
-              console.log("FAILED...", error);
-              alert("FAILED...", error);
-            }
-          );
+            // send the email here
+            emailjs.sendForm(serviceID, templateID, this).then(
+                (response) => {
+                console.log("SUCCESS!", response.status, response.text);
+                alert("SUCCESS!");
+                },
+                (error) => {
+                console.log("FAILED...", error);
+                alert("FAILED...", error);
+                }
+            );
         });
+    });
     </script>
 </head>
 
