add subject line to contact form

--- a/index.html
+++ b/index.html
@@ -179,6 +179,12 @@
                         <input type="email" id="email" name="email" required>
                     </div>
 
+                    <!-- Subject Input -->
+                    <div>
+                        <label for="subject">Subject:</label>
+                        <input type="text" id="subject" name="subject" required>
+                    </div>
+
                     <!-- Message Textarea -->
                     <div>
                         <label for="message">Type your message here:</label>
